--- a/src/app/pages/feature/manage/managefeature.page.scss
+++ b/src/app/pages/feature/manage/managefeature.page.scss
@@ -29,10 +29,14 @@ app-managefeature {
     --background: transparent !important;
   }
 
+  .slides-md {
+    padding: 0 30px !important;
+  }
+
   ion-slide {
     box-shadow: 0 5px 10px rgba(0,0,0,.2);
     padding: 10px;
-    margin: 15px;
+    margin: 15px 0;
     border-radius: 10px;
   }
 
