--- a/src/app/pages/feature/manage/managefeature.page.html
+++ b/src/app/pages/feature/manage/managefeature.page.html
@@ -124,48 +124,48 @@
 
 
 <ion-header *ngIf="resource && resource._id && moment.resource && moment.resource.field" no-border>
-  <ion-slides [options]="{slidesPerView: 6, grabCursor: true, updateOnWindowResize: true}">
+  <ion-slides [options]="slideOpts">
     <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'insight')}" (click)="clickManageMenu('insight', null)">
       <ion-item [color]="(selectedMenuOption === 'insight') ? 'primary' : 'secondary'" lines="none">
         <ion-icon slot="start" name="person" *ngIf="platform.width() < 768"></ion-icon>
-        <ion-label>Insight</ion-label>
+        <ion-label *ngIf="platform.width() >= 768">Insight</ion-label>
       </ion-item>
     </ion-slide>
     <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'profile')}" (click)="clickManageMenu('profile', null)">
       <ion-item [color]="(selectedMenuOption === 'profile') ? 'primary' : 'secondary'" lines="none">
         <ion-icon slot="start" name="clipboard" *ngIf="platform.width() < 768"></ion-icon>
-        <ion-label *ngIf="moment && moment.categories && !moment.categories.includes('5c915476e172e4e64590e349')">Profile</ion-label>
-        <ion-label [ngClass]="{ 'selected': (selectedMenuOption === 'profile')}" *ngIf="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')">Plan</ion-label>
+        <ion-label *ngIf="moment && moment.categories && !moment.categories.includes('5c915476e172e4e64590e349') && platform.width() >= 768">Profile</ion-label>
+        <ion-label [ngClass]="{ 'selected': (selectedMenuOption === 'profile')}" *ngIf="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349') && platform.width() >= 768">Plan</ion-label>
       </ion-item>
     </ion-slide>
     <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'people')}" (click)="clickManageMenu('people', null)">
       <ion-item [color]="(selectedMenuOption === 'people') ? 'primary' : 'secondary'" lines="none">
         <ion-icon slot="start" name="people" *ngIf="platform.width() < 768"></ion-icon>
-        <ion-label>People</ion-label>
+        <ion-label *ngIf="platform.width() >= 768">People</ion-label>
       </ion-item>
     </ion-slide>
     <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'groups')}" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348'))" (click)="clickManageMenu('groups', null)">
       <ion-item [color]="(selectedMenuOption === 'groups') ? 'primary' : 'secondary'" lines="none">
         <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-        <ion-label>Groups</ion-label>
+        <ion-label *ngIf="platform.width() >= 768">Groups</ion-label>
       </ion-item>
     </ion-slide>
     <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'mentoring')}" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348'))" (click)="clickManageMenu('mentoring', null)">
       <ion-item [color]="(selectedMenuOption === 'mentoring') ? 'primary' : 'secondary'" lines="none">
         <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-        <ion-label>Mentoring</ion-label>
+        <ion-label *ngIf="platform.width() >= 768">Mentoring</ion-label>
       </ion-item>
     </ion-slide>
     <ion-slide *ngIf="moment && moment.categories && moment.categories.includes('5c915324e172e4e64590e346')"  [ngClass]="{ 'selected': (selectedMenuOption === 'programs')}" (click)="clickManageMenu('programs', null)">
       <ion-item [color]="(selectedMenuOption === 'programs') ? 'primary' : 'secondary'" lines="none">
         <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-        <ion-label>Programs</ion-label>
+        <ion-label *ngIf="platform.width() >= 768">Programs</ion-label>
       </ion-item>
     </ion-slide>
     <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'plans')}" (click)="clickManageMenu('plans', null)">
       <ion-item [color]="(selectedMenuOption === 'plans') ? 'primary' : 'secondary'" lines="none" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')">
         <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-        <ion-label>Plans</ion-label>
+        <ion-label *ngIf="platform.width() >= 768">Plans</ion-label>
       </ion-item>
     </ion-slide>
   </ion-slides>
