--- a/src/app/pages/feature/editparticipants/editparticipants.page.html
+++ b/src/app/pages/feature/editparticipants/editparticipants.page.html
@@ -57,38 +57,33 @@
         </ion-select>
       </ion-item>
       <ion-item lines="none">
-        <ion-label (click)="sortDisplay('participant')">
-          Current Participants
+        <div class="column column-label" (click)="sortDisplay('participant')">Participants</div>
+        <div class="column column-label" (click)="sortDisplay('role')">Role</div>
+
+        <!-- <ion-label slot="start">
+          <h3>Current Participants</h3>
         </ion-label>
-        <ion-label (click)="sortDisplay('role')">
-          Role
-        </ion-label>
+        <ion-label slot="start">
+          <h3>Role</h3>
+        </ion-label> -->
       </ion-item>
       <ion-item
         *ngFor="let user of uniqueParticipantList; index as j"
         lines="full"
         (click)="seeUserInfo($event, user)"
       >
-      <!-- <div style="display: inline-block">
-        <ion-avatar style="display: block">
-          <ion-img  style="display: block" *ngIf="user.avatar" [src]="user.avatar"></ion-img>
-          <ion-img style="display: block"
+        <ion-avatar class="participant-avatar" slot="start">
+          <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
+          <ion-img
             *ngIf="!user.avatar"
             src="assets/img/avatar-default.jpg"
           ></ion-img>
         </ion-avatar>
-        <ion-label>{{user.first_name}} {{user.last_name}}</ion-label>
-      </div> -->
-      <ion-avatar slot="start">
-        <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
-        <ion-img
-          *ngIf="!user.avatar"
-          src="assets/img/avatar-default.jpg"
-        ></ion-img>
-      </ion-avatar>
-      <ion-label>{{user.first_name}} {{user.last_name}}</ion-label>
-        <ion-label>{{user.role}}</ion-label>
-        <ion-button (click)="pushToMessagePage($event, user)">Chat</ion-button>
+        <ion-label slot="start"
+          >{{user.first_name}} {{user.last_name}}</ion-label
+        >
+        <ion-label slot="start">{{user.role}}</ion-label>
+        <ion-button slot="end" (click)="pushToMessagePage($event, sample)">Chat</ion-button>
       </ion-item>
     </ion-list>
 
