--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -218,7 +218,7 @@
         </ion-list>
       </ion-item-group>
       <ion-item (click)="select.open($event)" *ngIf="parentRelationshipListOfGoals.length && calendarItem.users && calendarItem.users.length">
-        <div class="moment-label" slot="start"><ion-icon class="side-icon" color="grey" name="flag"></ion-icon></div>
+        <div class="moment-label" slot="start"><ion-icon class="side-icon" color="grey" name="pricetag"></ion-icon></div>
         <div *ngFor="let goal of parentRelationshipListOfGoals" class="moment-input">{{parentRelationshipGoalAttributes.includes(goal[0]) ? goal[5] : "Assigned To"}}</div>
         <ion-label hidden="true">Goals</ion-label>
         <ion-select [(ngModel)]="parentRelationshipGoalAttributes" interface="action-sheet" (ionBlur)="anyChangeMade = true" multiple="true" slot="end" hidden>
