--- a/src/app/pages/user/register/register.page.html
+++ b/src/app/pages/user/register/register.page.html
@@ -141,28 +141,30 @@
     <ion-slide>
       <ion-grid class="full-height">
         <ion-row class="ion-align-items-center full-height">
-          <form [formGroup]="nameForm" class="form">
             <ion-list lines="none">
-              <ion-buttons class="custom-back-button" slot="start" (click)="view = 'signin'">
-                <ion-button fill="clear">
-                  <ion-icon name="chevron-back-outline" color="primary"></ion-icon>
-                </ion-button>
-              </ion-buttons>
+            <ion-buttons class="custom-back-button" slot="start" (click)="view = 'signin'">
+              <ion-button fill="clear">
+                <ion-icon name="chevron-back-outline" color="primary"></ion-icon>
+              </ion-button>
+            </ion-buttons>
 
-
-              <ion-segment [value]="loginMode" (ionChange)="changeLoginMode($event)">
-                <ion-segment-button value="email">
-                  <ion-label>Email</ion-label>
-                </ion-segment-button>
-                <ion-segment-button value="mobile">
-                  <ion-label>Mobile</ion-label>
-                </ion-segment-button>
-              </ion-segment>
-
+            <ion-segment [value]="loginMode" (ionChange)="changeLoginMode($event)">
+              <ion-segment-button value="email">
+                <ion-label>Email</ion-label>
+              </ion-segment-button>
+              <ion-segment-button value="mobile">
+                <ion-label>Mobile</ion-label>
+              </ion-segment-button>
+            </ion-segment>
+          </ion-list>
+            <ion-list *ngIf="loginMode === 'email'" lines="none">
+              
+            <form [formGroup]="nameForm" class="form">
               <ion-item lines="full">
                 <ion-input type="text" formControlName="first_name" placeholder="First Name" autocapitalize="true" id="first-name"></ion-input>
                 <ion-input type="text" formControlName="last_name" placeholder="Last Name" autocapitalize="true" id="last-name"></ion-input>
               </ion-item>
+
               <div *ngIf="!nameForm.controls.first_name.pristine && !nameForm.controls.first_name.valid">
                 <div class="form-error ion-text-wrap"  *ngIf="!nameForm.controls.first_name.pristine && nameForm.controls.first_name.hasError('required')">
                   This is a required field.
@@ -171,9 +173,7 @@
                   First name must have at least 2 characters
                 </div>
               </div>
-              <ion-item lines="full">
-                <ion-input type="text" formControlName="last_name" (keyup.enter)="nextSlide()" placeholder="Last Name" autocapitalize="true" id="last-name"></ion-input>
-              </ion-item>
+          
               <div *ngIf="!nameForm.controls.last_name.pristine && !nameForm.controls.last_name.valid">
                 <div class="form-error ion-text-wrap" *ngIf="!nameForm.controls.last_name.pristine && nameForm.controls.last_name.hasError('required')">
                   This is a required field.
@@ -182,62 +182,9 @@
                   Last name must have at least 2 characters
                 </div>
               </div>
-
-              <!-- <ion-item *ngIf="loginMode === 'mobile'" lines="full">
-                <ion-select [interfaceOptions]="{cssClass: 'level-15'}" class="calling_code" formControlName="calling_code" name="Country Calling Code" value="+1">
-                  <ion-select-option *ngFor="let calling_code of calling_codes" [value]="calling_code.value">{{calling_code.name}}</ion-select-option>
-                </ion-select>
-                <ion-input id="phone_number" class="phone_number" type="tel" formControlName="phone_number" placeholder="Mobile Number"></ion-input>
-              </ion-item> -->
-
-           
-              <!-- <ion-item *ngIf="loginMode === 'mobile'" lines="full">
-                <ion-select [interfaceOptions]="{cssClass: 'level-15'}" class="calling_code" formControlName="mobile_calling_code" name='Country Calling Code'>
-                  <ion-select-option *ngFor="let calling_code of calling_codes" [value]="calling_code.value">{{calling_code.name}}</ion-select-option>
-                </ion-select>
-                <ion-input class="phone_number" type="tel" pattern="[0-9]{4,}$" formControlName="mobile_sig_number" placeholder="Mobile Number"></ion-input>
-              </ion-item>
-              <div class="form-error" *ngIf="!mobileForm.controls.mobile_sig_number.pristine && !mobileForm.controls.mobile_sig_number.valid">
-                Invalid mobile number.
-              </div>
-            
-            <div *ngIf="loginMode === 'mobile'" lines="full">
-            <p class="centered">We will send you a SMS message to verify this number. Standard SMS rate applies.</p>
-            <ion-row>
-              <ion-col>
-                <ion-button expand="full" shape="round" color="primary" (click)="registerMobile()" [disabled]="!mobileForm.valid">Send the SMS Code</ion-button>
-              </ion-col>
-            </ion-row>
-            </div> -->
-
-
-            <form [formGroup]="mobileForm" *ngIf="loginMode === 'mobile'" class="form">
-              <ion-list lines="none" >
-                <ion-item lines="full">
-                  <ion-select [interfaceOptions]="{cssClass: 'level-15'}" class="calling_code" formControlName="mobile_calling_code" name='Country Calling Code'>
-                    <ion-select-option *ngFor="let calling_code of calling_codes" [value]="calling_code.value">{{calling_code.name}}</ion-select-option>
-                  </ion-select>
-                  <ion-input class="phone_number" type="tel" pattern="[0-9]{4,}$" formControlName="mobile_sig_number" placeholder="Mobile Number"></ion-input>
-                </ion-item>
-                <div class="form-error" *ngIf="!mobileForm.controls.mobile_sig_number.pristine && !mobileForm.controls.mobile_sig_number.valid">
-                  Invalid mobile number.
-                </div>
-              </ion-list>
-              <p class="centered">We will send you a SMS message to verify this number. Standard SMS rate applies.</p>
-              <ion-row>
-                <ion-col>
-                  <ion-button expand="full" shape="round" color="primary" (click)="registerMobile()" [disabled]="!mobileForm.valid">Send the SMS Code</ion-button>
-                </ion-col>
-              </ion-row>
-              <!-- <ion-row [hidden]="exitType === 'dashboard'">
-                <ion-col>
-                  <ion-button expand="full" fill="clear" (click)="goToSlide(1)" class="ion-text-wrap">Sign me up with email instead</ion-button>
-                </ion-col>
-              </ion-row> -->
             </form>
 
-
-
+            <form [formGroup]="emailPassForm" class="form">
               <ion-item *ngIf="loginMode === 'email'" lines="full">
                 <!-- <ion-input id="email" class="email" type="email" formControlName="email" placeholder="Email" id="email"></ion-input> -->
                 <ion-input #email type="email" formControlName="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z0-9-.]{2,}$" placeholder="Email"></ion-input>
@@ -281,6 +228,7 @@
                   Passwords do not match
                 </div>
               </div>
+            </form>
               <div></div><!--Do not remove! This fixes the white line issue at the bottom-->
               <p *ngIf="loginMode === 'email'" class="centered" style="text-align: center;">By tapping Next, you agree to our <a href="https://restvo.com/privacy-policy.html" target="_blank">Terms of Service and Privacy Policy</a>.</p>
 
@@ -290,22 +238,69 @@
                 </ion-col>
               </ion-row>
 
-              <ion-row *ngIf="loginMode === 'email'">
+              <!-- <ion-row *ngIf="loginMode === 'email'">
                 <ion-col>
                   <ion-button expand="full" fill="clear" (click)="goToSlide(3)" class="ion-text-wrap">Sign-up via mobile phone instead</ion-button>
                 </ion-col>
-              </ion-row>
+              </ion-row> -->
               
 
 
             </ion-list>
-            <!-- <p class="centered" style="text-align: center;">By tapping Next, you agree to our <a href="https://restvo.com/privacy-policy.html" target="_blank">Terms of Service and Privacy Policy</a>.</p>
+          <!-- </form> -->
+
+          <!-- <form [formGroup]="mobileForm" class="form"> -->
+            <ion-list *ngIf="loginMode === 'mobile'" lines="none" >
+              <form [formGroup]="nameForm" class="form">
+              <ion-item *ngIf="loginMode === 'mobile'" lines="full">
+                <ion-input type="text" formControlName="first_name" placeholder="First Name" autocapitalize="true" id="first-name"></ion-input>
+                <ion-input type="text" formControlName="last_name" placeholder="Last Name" autocapitalize="true" id="last-name"></ion-input>
+              </ion-item>
+
+              <div *ngIf="!nameForm.controls.first_name.pristine && !nameForm.controls.first_name.valid">
+                <div class="form-error ion-text-wrap"  *ngIf="!nameForm.controls.first_name.pristine && nameForm.controls.first_name.hasError('required')">
+                  This is a required field.
+                </div>
+                <div class="form-error ion-text-wrap"  *ngIf="!nameForm.controls.first_name.pristine && nameForm.controls.first_name?.errors?.minlength">
+                  First name must have at least 2 characters
+                </div>
+              </div>
+          
+              <div *ngIf="!nameForm.controls.last_name.pristine && !nameForm.controls.last_name.valid">
+                <div class="form-error ion-text-wrap" *ngIf="!nameForm.controls.last_name.pristine && nameForm.controls.last_name.hasError('required')">
+                  This is a required field.
+                </div>
+                <div class="form-error ion-text-wrap" *ngIf="!nameForm.controls.last_name.pristine && nameForm.controls.last_name?.errors?.minlength">
+                  Last name must have at least 2 characters
+                </div>
+              </div>
+            </form>
+              <form [formGroup]="mobileForm" class="form">
+              <ion-item lines="full">
+                <ion-select [interfaceOptions]="{cssClass: 'level-15'}" class="calling_code" formControlName="mobile_calling_code" name='Country Calling Code'>
+                  <ion-select-option *ngFor="let calling_code of calling_codes" [value]="calling_code.value">{{calling_code.name}}</ion-select-option>
+                </ion-select>
+                <ion-input class="phone_number" type="tel" pattern="[0-9]{4,}$" formControlName="mobile_sig_number" placeholder="Mobile Number"></ion-input>
+              </ion-item>
+              <div class="form-error" *ngIf="!mobileForm.controls.mobile_sig_number.pristine && !mobileForm.controls.mobile_sig_number.valid">
+                Invalid mobile number.
+              </div>
+            </form>
+            <p class="centered">We will send you a SMS message to verify this number. Standard SMS rate applies.</p>
+            <ion-row>
+              <ion-col>
+                <ion-button expand="full" shape="round" color="primary" (click)="registerMobile()" [disabled]="!mobileForm.valid">Send the SMS Code</ion-button>
+              </ion-col>
+            </ion-row>
+            </ion-list>
+          <!-- </form> -->
+
+                     <!-- <p class="centered" style="text-align: center;">By tapping Next, you agree to our <a href="https://restvo.com/privacy-policy.html" target="_blank">Terms of Service and Privacy Policy</a>.</p>
             <ion-row>
               <ion-col>
                 <ion-button expand="full" shape="round" color="primary" (click)="nextSlide()" [disabled]="!nameForm.valid" id="submit-name">Next</ion-button>
               </ion-col>
             </ion-row> -->
-          </form>
         
         </ion-row>
       </ion-grid>
