--- a/src/app/pages/feature/manage/managefeature.page.html
+++ b/src/app/pages/feature/manage/managefeature.page.html
@@ -35,15 +35,15 @@
   <!--Activity Hierarchy-->
   <ion-buttons *ngIf="platform.width() >= 768" style="padding-left: 10px">
     <ion-button (click)="upOneLevel(moment.parent_programs[0].parent_programs[0]._id)" *ngIf="moment.parent_programs && moment.parent_programs.length && moment.parent_programs[0] && moment.parent_programs[0].parent_programs && moment.parent_programs[0].parent_programs.length && moment.parent_programs[0].parent_programs[0] && moment.parent_programs[0].parent_programs[0]._id">
-      <ion-badge color="button1">{{moment.parent_programs[0].parent_programs[0].matrix_string[0][0]}}</ion-badge>
+      <ion-badge [ngStyle]="{'background': moment.parent_programs[0].parent_programs[0].categories | background :null : 'activity_type'}">{{moment.parent_programs[0].parent_programs[0].resource['en-US'].value}}</ion-badge>
     </ion-button>
     <ion-icon name="chevron-forward" *ngIf="moment.parent_programs && moment.parent_programs.length && moment.parent_programs[0] && moment.parent_programs[0].parent_programs && moment.parent_programs[0].parent_programs.length && moment.parent_programs[0].parent_programs[0] && moment.parent_programs[0].parent_programs[0]._id"></ion-icon>
     <ion-button (click)="upOneLevel(moment.parent_programs[0]._id)" *ngIf="moment.parent_programs && moment.parent_programs.length">
-      <ion-badge color="button2">{{moment.parent_programs[0].matrix_string[0][0]}}</ion-badge>
+      <ion-badge [ngStyle]="{'background': moment.parent_programs[0].categories | background :null : 'activity_type'}">{{moment.parent_programs[0].resource['en-US'].value}}</ion-badge>
     </ion-button>
     <ion-icon name="chevron-forward" *ngIf="moment.parent_programs && moment.parent_programs.length"></ion-icon>
     <ion-button>
-      <ion-badge>{{moment.matrix_string[0][0]}}</ion-badge>
+      <ion-badge [ngStyle]="{'background': moment.categories | background :null : 'activity_type'}">{{moment.resource['en-US'].value}}</ion-badge>
     </ion-button>
     <!--<ion-icon name="chevron-forward"></ion-icon>
     <ion-button>
@@ -96,30 +96,12 @@
             <ion-label class="menu-label">Programs</ion-label>
           </ion-item>
         </ion-col>
-        <!--<ion-col [ngClass]="{'selected': router.url.includes('plan')}" (click)="clickManageMenu('plans', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348'))"> &lt;!&ndash;if Community or Program&ndash;&gt;
-          <ion-item class="ion-no-padding" [color]="router.url.includes('plan') ? 'primary' : 'secondary'" lines="none" >
-            <ion-icon class="ion-no-margin" slot="start" name="paper-plane"></ion-icon>
-            <ion-label class="menu-label">Plans</ion-label>
-          </ion-item>
-        </ion-col>-->
         <ion-col [ngClass]="{'selected': router.url.includes('creator')}" (click)="clickManageMenu('creator', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5e9f46e1c8bf1a622fec69d5') || moment.categories.includes('5dfdbb547b00ea76b75e5a70'))"> <!--if Journey or Relationship-->
           <ion-item class="ion-no-padding" [color]="router.url.includes('creator') ? 'primary' : 'secondary'" lines="none">
             <ion-icon class="ion-no-margin" slot="start" name="paper-plane"></ion-icon>
             <ion-label class="menu-label">Curriculum</ion-label>
           </ion-item>
         </ion-col>
-        <!--<ion-col [ngClass]="{'selected': (router.url.includes('/schedule/') && selectedSchedule && selectedSchedule._id === schedule._id)}" (click)="clickManageMenu('schedule', schedule)" *ngFor="let schedule of schedules; index as i" [hidden]="!(moment && moment.resource && moment.resource.matrix_number.length && moment.resource.matrix_number[0].includes(10210))"> &lt;!&ndash;if Schedule is enabled&ndash;&gt;
-          <ion-item class="ion-no-padding" [color]="(router.url.includes('/schedule/') && selectedSchedule && selectedSchedule._id === schedule._id) ? 'primary' : 'secondary'" lines="none">
-            <ion-icon class="ion-no-margin" slot="start" name="book"></ion-icon>
-            <ion-label class="menu-label">Schedule {{i + 1}}</ion-label>
-          </ion-item>
-        </ion-col>
-        <ion-col [ngClass]="{'selected': router.url.includes('new-schedule')}" (click)="clickManageMenu('new-schedule', null)" [hidden]="!(moment && moment.resource && moment.resource.matrix_number.length && moment.resource.matrix_number[0].includes(10210))" >
-          <ion-item class="ion-no-padding" [color]="router.url.includes('new-schedule') ? 'primary' : 'secondary'" lines="none">
-            <ion-icon class="ion-no-margin" slot="start" name="book"></ion-icon>
-            <ion-label class="menu-label">+ Schedule</ion-label>
-          </ion-item>
-        </ion-col>-->
         <ion-col [ngClass]="{'selected': router.url.includes('onboarding')}" (click)="clickManageMenu('onboarding', null)" *ngIf="!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e17acd47b00ea76b75e5a71'))">
           <ion-item class="ion-no-padding" [color]="router.url.includes('onboarding') ? 'primary' : 'secondary'" lines="none">
             <ion-icon class="ion-no-margin" slot="start" name="list"></ion-icon>
@@ -173,12 +155,6 @@
       <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
       <ion-label>Programs</ion-label>
     </ion-item>
-<!--    &lt;!&ndash;plan is shown only in Community and Program&ndash;&gt;
-    <ion-item (click)="clickManageMenu('plans', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348'))"> &lt;!&ndash;if Community or Program&ndash;&gt;
-      <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-      <ion-label>Plans</ion-label>
-    </ion-item>-->
-    <!--curriculum is shown only in journey and relationship-->
     <ion-item (click)="clickManageMenu('creator', null)" *ngIf="moment && moment.categories && (moment.categories.includes('5e9f46e1c8bf1a622fec69d5') || moment.categories.includes('5dfdbb547b00ea76b75e5a70'))"> <!--if Journey or Relationship-->
       <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
       <ion-label>Curriculum</ion-label>
@@ -198,16 +174,6 @@
       <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
       <ion-label>Groups</ion-label>
     </ion-item>
-    <!--<ion-item-group *ngIf="moment && moment.resource && moment.resource.matrix_number.length && moment.resource.matrix_number[0].includes(10210)"> &lt;!&ndash;if Schedule is enabled&ndash;&gt;
-      <ion-item (click)="clickManageMenu('schedule', schedule)" *ngFor="let schedule of schedules; index as i">
-        <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-        <ion-label>Schedule {{i + 1}}</ion-label>
-      </ion-item>
-      <ion-item (click)="clickManageMenu('new-schedule', null)">
-        <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
-        <ion-label>+ Schedule</ion-label>
-      </ion-item>
-    </ion-item-group>-->
     <ion-item (click)="clickManageMenu('onboarding', null)" *ngIf="!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e17acd47b00ea76b75e5a71'))">
       <ion-icon slot="start" name="list" *ngIf="platform.width() < 768"></ion-icon>
       <ion-label>Onboarding</ion-label>
